Added dropdown tt chooser to HTML

--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
       <button type="button" id="takeScreenshotBtn" class="btn btn-primary">Timetable Screenshot</button>
       <button type="button" id="toggleClickToSelect" data-toggle="button" class="btn btn-danger" data-state="enabled">Disable Quick Visualization</button>
       <button type="button" id="resetButton" class="btn btn-success">Reset</button>
+      <!-- Single button -->
+      <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Save #1 <span class="caret"></span>
+  </button>
+        <ul id="saved-tt-picker" class="dropdown-menu">
+          <li>Save #1</li>
+        </ul>
+      </div>
     </div>
   </div>
   <!-- End of container-fluid -->
