--- a/index.html
+++ b/index.html
@@ -133,13 +133,17 @@
       <button type="button" id="toggleClickToSelect" data-toggle="button" class="btn btn-danger" data-state="enabled">Disable Quick Visualization</button>
       <button type="button" id="resetButton" class="btn btn-success">Reset</button>
       <!-- Single button -->
-      <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Save #1 <span class="caret"></span>
-  </button>
-        <ul id="saved-tt-picker" class="dropdown-menu">
-          <li>Save #1</li>
-        </ul>
+      <div class="btn-group" role="group">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Save #1 <span class="caret"></span>
+    </button>
+          
+          <ul id="saved-tt-picker" class="dropdown-menu">
+            <li><a href="#">Save #1</a></li>
+          </ul>
+        </div>
+        <button type="button" class="btn btn-default">+</button>  
       </div>
     </div>
   </div>
