--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
       <!-- Single button -->
       <div class="btn-group" role="group">
         <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Save #1 <span class="caret"></span>
+          <button id="saved-tt-picker-label" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="btn-text">Save #1<span> <span class="caret"></span>
     </button>
           
           <ul id="saved-tt-picker" class="dropdown-menu">
-            <li><a href="#">Save #1</a></li>
+            <li><a href="#" data-table-id="0">Default</a></li>
           </ul>
         </div>
         <button type="button" class="btn btn-default">+</button>  
