Multiple tables can be added and switched.

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
       <div class="btn-group" role="group">
         <div class="btn-group">
           <button id="saved-tt-picker-label" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="btn-text">Save #1<span> <span class="caret"></span>
+      <span class="btn-text">Default<span> <span class="caret"></span>
     </button>
           
           <ul id="saved-tt-picker" class="dropdown-menu">
             <li><a href="#" data-table-id="0">Default</a></li>
           </ul>
         </div>
-        <button type="button" class="btn btn-default">+</button>  
+        <button id="saved-tt-picker-add" type="button" class="btn btn-default">+</button>  
       </div>
     </div>
   </div>
