Fixed caret bug in table dropdown label

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="btn-group" role="group">
         <div class="btn-group">
           <button id="saved-tt-picker-label" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="btn-text">Default<span> <span class="caret"></span>
+      <span class="btn-text">Default</span> <span class="caret"></span>
     </button>
           
           <ul id="saved-tt-picker" class="dropdown-menu">
