Added disclaimer modal

--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
+  <!-- Disclaimer modal about using this website for the general audience. -->
+  <div class="modal fade" tabindex="-1" role="dialog" id="disclaimer-modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title text-danger text-center"><span class="glyphicon glyphicon-warning-sign"></span> Disclaimer</h4>
+        </div>
+        <div class="modal-body text-danger">
+          <p><strong>FFCSOTG is not affiliated to VIT University.</strong> We created this website to assist students in preparing time tables before course registration. We try our best to keep the website updated with the changes made by the Academics with respect to aspects like the curriculum and the structure of the time table. However, please note that <strong>FFCSOTG is not the most reliable source for any updates in the course registration process.</strong> Kindly consult the student portal or watch for emails from the Academics personnel for all your updates. We are glad you find this tool useful but we <strong>strongly advise you to refer to official correspondence for any changes that might not be reflected in this website.</strong></p>
+          <p class="text-italics">
+            — The FFCSOTG Team
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default btn-danger" data-dismiss="modal">I understand</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
   <!-- Header -->
   <header class="container-fluid">
 
