Updated Timetable Theory and Lab Hours

--- a/src/index.html
+++ b/src/index.html
@@ -599,16 +599,16 @@
                             08:00 AM <br />to <br />08:50 AM
                         </td>
                         <td class="TheoryHours">
-                            09:00 AM <br />to <br />09:50 AM
+                            08:55 AM <br />to <br />09:45 AM
                         </td>
                         <td class="TheoryHours">
-                            10:00 AM <br />to <br />10:50 AM
+                            09:50 AM <br />to <br />10:40 AM
                         </td>
                         <td class="TheoryHours">
-                            11:00 AM <br />to <br />11:50 AM
+                            10:45 AM <br />to <br />11:35 AM
                         </td>
                         <td class="TheoryHours">
-                            12:00 PM <br />to <br />12:50 PM
+                            11:40 AM <br />to <br />12:30 PM
                         </td>
                         <td class="TheoryHours"></td>
                         <td width="8px" rowspan="9" class="ColumnOneDays">
@@ -618,19 +618,19 @@
                             02:00 PM <br />to <br />02:50 PM
                         </td>
                         <td class="TheoryHours">
-                            03:00 PM <br />to <br />03:50 PM
+                            02:55 PM <br />to <br />03:45 PM
                         </td>
                         <td class="TheoryHours">
-                            04:00 PM <br />to <br />04:50 PM
+                            03:50 PM <br />to <br />04:40 PM
                         </td>
                         <td class="TheoryHours">
-                            05:00 PM <br />to <br />05:50 PM
+                            04:45 PM <br />to <br />05:35 PM
                         </td>
                         <td class="TheoryHours">
-                            06:00 PM <br />to <br />06:50 PM
+                            05:40 PM <br />to <br />06:30 PM
                         </td>
                         <td class="TheoryHours">
-                            07:00 PM <br />to <br />07:50 PM
+                            06:35 PM <br />to <br />07:25 PM
                         </td>
                         <!--<td class="TheoryHours">07:00 PM<br>to<br>07:50 PM</td>
           <td class="TheoryHours">08:00 PM<br>to<br>08:50 PM</td>-->
@@ -638,40 +638,40 @@
                     <tr>
                         <td class="ColumnOneDays">LAB <br />HOURS</td>
                         <td class="LabHours">
-                            08:00 AM <br />to <br />08:45 AM
+                            08:00 AM <br />to <br />08:50 AM
                         </td>
                         <td class="LabHours">
-                            08:46 AM <br />to <br />09:30 AM
+                            08:50 AM <br />to <br />09:40 AM
                         </td>
                         <td class="LabHours">
-                            10:00 AM <br />to <br />10:45 AM
+                            09:50 AM <br />to <br />10:40 AM
                         </td>
                         <td class="LabHours">
-                            10:46 AM <br />to <br />11:30 AM
+                            10:40 AM <br />to <br />11:30 AM
                         </td>
                         <td class="LabHours">
-                            11:31 AM <br />to <br />12:15 AM
+                            11:40 AM <br />to <br />12:30 PM
                         </td>
                         <td class="LabHours">
-                            12:16 AM <br />to <br />01:00 PM
+                            12:30 PM <br />to <br />01:20 PM
                         </td>
                         <td class="LabHours">
-                            02:00 PM <br />to <br />02:45 PM
+                            02:00 PM <br />to <br />02:50 PM
                         </td>
                         <td class="LabHours">
-                            02:46 PM <br />to <br />03:30 PM
+                            02:50 PM <br />to <br />03:40 PM
                         </td>
                         <td class="LabHours">
-                            04:00 PM <br />to <br />04:45 PM
+                            03:50 PM <br />to <br />04:40 PM
                         </td>
                         <td class="LabHours">
-                            04:46 PM <br />to <br />05:30 PM
+                            04:40 PM <br />to <br />05:30 PM
                         </td>
                         <td class="LabHours">
-                            05:31 PM <br />to <br />06:15 PM
+                            05:40 PM <br />to <br />06:30 PM
                         </td>
                         <td class="LabHours">
-                            06:16 PM <br />to <br />07:00 PM
+                            06:30 PM <br />to <br />07:20 PM
                         </td>
                         <!--<td class="LabHours">07:30 PM<br>to<br>08:20 PM</td>
           <td class="LabHours">08:20 PM<br>to<br>09:10 PM</td>-->
@@ -698,6 +698,7 @@
                         >
                             TG1 / L5
                         </td>
+
                         <td class="TimetableContent L6 noPreTheory">L6</td>
                         <td class="TimetableContent A2 L31 noPostLab">
                             A2 / L31
@@ -785,7 +786,7 @@
                         <td
                             class="TimetableContent V1 L16 noPostLab noPreTheory"
                         >
-                            V1 / L16
+                            TD1 / L16
                         </td>
                         <td class="TimetableContent V2 noPostLab noPreTheory">
                             V2
@@ -882,7 +883,7 @@
                         <td
                             class="TimetableContent TD1 L29 noPostLab noPreTheory"
                         >
-                            TD1 / L29
+                            TDD1 / L29
                         </td>
                         <td class="TimetableContent L30 noPreTheory">L30</td>
                         <td class="TimetableContent E2 L55 noPostLab">
