--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
                     <div class="panel-body">
                         <form class="col-xs-12">
                             <div class="row">
-                                <div class="form-group col-xs-12 col-sm-9">
+                                <div class="form-group col-xs-12 col-sm-7">
                                     <label
                                         for="inputCourseCode"
                                         class="control-label"
@@ -320,6 +320,23 @@
                                             multiple="multiple"
                                         >
                                             <!-- <option value="A1">A1</option> -->
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <!-- Filter course by venue -->
+                                <div class="form-group col-xs-12 col-sm-2">
+                                    <label
+                                        for="filter-by-slot"
+                                        class="control-label"
+                                        >Filter By Venue</label
+                                    >
+                                    <div>
+                                        <select
+                                            id="filter-by-venue"
+                                            multiple="multiple"
+                                        >
+                                            <!-- <option value="AB1-101">AB1-101</option> -->
                                         </select>
                                     </div>
                                 </div>
