Added action buttons to slot filter

--- a/src/index.html
+++ b/src/index.html
@@ -507,6 +507,7 @@
                                     data-width="100%"
                                     data-live-search="true"
                                     data-live-search-placeholder="Search for a slot"
+                                    data-actions-box="true"
                                     multiple
                                     disabled
                                 ></select>
