--- a/src/index.html
+++ b/src/index.html
@@ -156,11 +156,22 @@
                                     <li>
                                         <a
                                             class="dropdown-item"
-                                            href="whatsapp://send?text=FFCS made hassle free! https://ffcsonthego.vatz88.in/"
+                                            href="https://wa.me/?text=FFCS made hassle free! https://ffcsonthego.vatz88.in/"
                                             target="_blank"
                                         >
                                             <i class="fab fa-whatsapp"></i>
                                             <span>&nbsp;&nbsp;WhatsApp</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            class="dropdown-item"
+                                            id="shareOther"
+                                            onclick="shareWebsite()"
+                                            href=""
+                                        >
+                                            <i class="fas fa-share-alt"></i>
+                                            <span>&nbsp;&nbsp;Share using</span>
                                         </a>
                                     </li>
                                 </ul>
