Skipped schema test as it not working as of now

--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
                                     >
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#Ap"
+                                    <a class="dropdown-item" href="#AP"
                                         >AP Campus</a
                                     >
                                 </li>
